--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@
                   <li class="nav-item">
                     <a class="nav-link" href="#Fünfter"> Die Folgen von Homeschooling</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#Sechster"> Prokastrinieren</a>
+                  </li>
 
 
       </ul>
@@ -190,7 +193,20 @@
     stellt sich mir noch die Frage, warum genau in diesen Fächern es eine MÜP gibt. Warum nicht in Fächern, die es nötig haben, wie Musik. Ich weiß, viele empfinden Musik als unnötig, speziell wenn man in einem Naturwissenschaftlichen Zweig ist, aber wir hatten im gesamten Jahr keinen einzigen
     Test in Musik. Ich möchte wissen woraus der Lehrer die Note zusammenwürfelt. Aber dafür bekommt man in Mathe eine schöne MÜP, die die meisten Schüler eher verwirrt, und man eigentlich schon eine Schularbeit, gehabt hätte, zwar ist da das Argument, dass man eigentlich zwei hätte haben sollen,
     aber kommt schon. Der Lehrer hat diese Schularbeit und wenn jetzt jemand das Argument bringt, das eine Schularbeit zu wenig ist, da man ja mal einen schlechten Tag hat, ist das nicht wichtig, denn man kann auch zwei schlechte Tage haben und wenn man ehrlich ist, sollte man sich eher am gesamten
-    System etwas ändern.
+    System etwas ändern.</p>
+
+    <h2 id="Sechster" class="font-weight-bold"> Prokastrinieren</h2>
+
+    <p class="font-weight-bold"> Dieser Begriff sollte vielleicht einigen Eltern bekannt sein, jedoch für die, die nicht wissen was mir Prokastrinieren gemeint ist, habe ich hier eine kleine Erklärung. Man prokastriniert, wenn man eine Aufgabe immer weiter hinausschiebt, wodurch man nicht
+      dazu kommt, sie fertigzustellen. Man bringt sie nur fertig, wenn man durch Druck die Person dazu zwingt. Dieser Prozess kann häufig durch ein gewisses Objekt entstehen, welches die Person immer wieder ablenkt. Häufig ist das in Zeiten des Homeschoolings das Internet. Viele Personen
+      prokastinieren und wissen es vielleicht nicht mal oder sie wissen es genau und es ist ihnen egal. Egal welche Gruppe häufig ist der Auslöser dieses Problems, dass das Kind von den Aufgaben gelangweilt ist oder sie demotivierend sind. Das kann man auch verstehen, denn wer hat schon Lust
+      einen 5 Seiten langen Text über das Fehlen des Fahrradhelmes auf der Straße zu schreiben. Ich zumindest nicht. Dadurch denkt sich die betroffene Person, was sie eigentlich machen könnte oder besser wäre als das. Also eine entspannte Zeit und keinen Stress haben. Das ist heute für Viele
+      das Internet, zwar können es auch andere Sachen wie Sport sein, aber das Internet ist wohl das größte Beispiel. Personen sind gerne im Internet, weil es ihnen Spaß macht dort ihrer Lieblingsbeschäftigung nachzugehen. Sei das einfache Videos ansehen oder ein Spiel spielen. Die Möglichkeiten
+      sind da endlos.</p> <p class="font-weight-bold"> Speziell durch das Homeschooling ist dieses Problem stärker geworden, denn die Versuchung in das Internet zu gehen und nicht die langweilige Aufgabe zu machen, ist schon groß. Es ist ja nur ein bis zwei Klicks. Viele Personen sagen sich dann, dass sie nur 5 Minuten das Video ansehen
+      oder das Spiel spielen. Dabei bleibt es aber nicht gerade oft, sondern aus den 5 Minuten, wird schnell eine halbe Stunde. Dieses Problem ist für die jenigen kleiner, die dadurch Schuldgefühle bekommen. Ich zähle mich da dazu. Ich bekomme schon nach 2 Minuten Schuldgefühle und denke mir:"Ich könnte
+      jetzt eigentlich die Aufgabe fertigstellen." Das bringt mir zwar einige Kopfschmerzen, ist aber im Gesamtpacket besser als einfach eine halbe Stunde draus zu machen. Wie kann man jetzt dieses Problem umgehen? Nun es gibt einige Möglichkeiten. Eine wäre, dass immer jemand neben euch sitzt und euch 
+      sagt, dass ihr weiterarbeiten solltet. Dadurch ahmt man das schlechte Gewissen nach. Eine andere Möglichkeit wäre es, wenn man sich das Prokastrinieren aufschiebt. Das klingt jetzt etwas ironisch, funktioniert aber. Man sagt sich einfach selbst, dass man das Video sieht, wenn die Aufgabe erledigt
+      ist, dadurch reizt man das Belohnungsverlangen und man will immer mehr von den verdienten Belohnungen. So ungefähr funktioniert das auch bei Glüchspiel. So wird das Aufschiebeproblem zum Aufgeschobenen.</p>
     </div>
   </div>
 </div>
