--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
     System etwas ändern.</p>
 
     <h2 id="Sechster" class="font-weight-bold"> Prokastrinieren</h2>
-
+<img src="https://www.google.at/url?sa=i&url=https%3A%2F%2Fblog.hubspot.de%2Fsales%2Fprokrastinieren&psig=AOvVaw0tWzmuYTMG_kxen9hsmOTT&ust=1624141178245000&source=images&cd=vfe&ved=0CAoQjRxqFwoTCKia7-ibovECFQAAAAAdAAAAABAD" alt="Prokastrinieren">
     <p class="font-weight-bold"> Dieser Begriff sollte vielleicht einigen Eltern bekannt sein, jedoch für die, die nicht wissen was mir Prokastrinieren gemeint ist, habe ich hier eine kleine Erklärung. Man prokastriniert, wenn man eine Aufgabe immer weiter hinausschiebt, wodurch man nicht
       dazu kommt, sie fertigzustellen. Man bringt sie nur fertig, wenn man durch Druck die Person dazu zwingt. Dieser Prozess kann häufig durch ein gewisses Objekt entstehen, welches die Person immer wieder ablenkt. Häufig ist das in Zeiten des Homeschoolings das Internet. Viele Personen
       prokastinieren und wissen es vielleicht nicht mal oder sie wissen es genau und es ist ihnen egal. Egal welche Gruppe häufig ist der Auslöser dieses Problems, dass das Kind von den Aufgaben gelangweilt ist oder sie demotivierend sind. Das kann man auch verstehen, denn wer hat schon Lust
