--- a/index.html
+++ b/index.html
@@ -163,13 +163,13 @@
           Tagen macht. Es wäre ja in der Schule auch nicht anderes und man könnte sie etwas mehr über die Woche verteilen. So sitzt man den gesamten Montag vor Video-Konferenzen und die Motivation geht stetig runter.</p>
 
 <h2 id="Vierter" class="font-weight-bold">Aufgaben im Homeschooling </h2></div>
-<div class="col-sm-5">
+<div class="col-sm-4">
 <img src="http://www.esa.int/var/esa/storage/images/esa_multimedia/images/2019/03/satellitenbild_von_europa/19279451-1-eng-GB/Satellitenbild_von_Europa_pillars.jpg" alt="Aufgabe im Homeschooling" width="300">
 </div>
-<div class="col-sm-4">
+<div class="col-sm-8">
 <p class="font-weight-bold"> Die Aufgaben sind eine Sache für sich im Homeschooling. Eigentlich machen sie knapp 90% der Zeit des Homeschoolings aus und sind ziemlich ausschlaggebend wie gut man diese Zeit übersteht. Sollte man recht kreative Aufgaben bekommen
   wird man sich wahrscheinlich nicht langweilen und immer sich auf diese Aufgaben freuen. Bei mir ging das so weit, dass ich mir die für mich am unterhaltsamsten oder in anderen Worten ausgedrückt weniger Augenkrebs verursachenden Aufgaben
-  bis zum Schluss aufschob um sie dann als perfekter Abschluss einer langen Woche genießen konnte. Das geht vom einfachen Anschauen von Dokumentationen, bei denen sich wenn man ehlich ist so oder so nichts merkt, bis hin zu </p> </div> <div class="col-sm-8"<p class="font-weight-bold"> einfachen Experimenten.
+  bis zum Schluss aufschob um sie dann als perfekter Abschluss einer langen Woche genießen konnte. Das geht vom einfachen Anschauen von Dokumentationen, bei denen sich wenn man ehlich ist so oder so nichts merkt, bis hin zu einfachen Experimenten.
   Dann gab es aber auch noch die Aufgaben die etwas unangenehmer waren.</p> <p class="font-weight-bold">Da gibt es viele Faktoren, die eine Aufgabe ziemlich unangenehm machen. Man kann die Aufgabe zu lang machen und sie gehen über 3 Seiten und man hat schon keine Lust mehr, nachdem man sich den 5 seitigen
   Merktext durchgelesen hat. Man kann auch die Aufgaben komplet unverständlich formulieren, sodass der Schüler keinen Plan mehr hat, was eigentlich seine Aufgabe ist. Ein Beispiel dafür war die Aufgabe: "Beschreibe die Oberflächenformen,
   die du auf dem Bild erkennst". Das hört sich jetzt erstmal nicht so dumm an oder? Jedoch war das ein Sattelietenbild und ich war maximal verwirrt. Was soll man da beschreiben? Ja, Berge sind braun und sehen aus wie zerknülltes Papier. Manchmal sind sie an der Spitze weiß, wodurch es aussieht wie Puderzucker. Das hört sich so an
