--- a/index.html
+++ b/index.html
@@ -162,9 +162,9 @@
           Konferenz verpasst. Da passieren natürlich viele Fehler. Dann regen sich aber wiederum die Lehrer auf, dass man nicht anwesend war. Schön wäre es wenn man die Video-Konferenzen einfach an fixen Terminen an den immer gleichen
           Tagen macht. Es wäre ja in der Schule auch nicht anderes und man könnte sie etwas mehr über die Woche verteilen. So sitzt man den gesamten Montag vor Video-Konferenzen und die Motivation geht stetig runter.</p>
 
-<h2 id="Vierter" class="font-weight-bold">Aufgaben im Homeschooling </h2></div>
+<h2 id="Vierter" class="font-weight-bold">Aufgaben im Homeschooling </h2>
 
-<img src="https://cdn.meine-vrm.de/FNwf44I66hFBKDIlf4_86s9bvc8=/1200x628/smart/819%2F18721%2F18721753%2F36450284.jpg" alt="Aufgabe im Homeschooling" width="300">
+<img src="https://cdn.meine-vrm.de/FNwf44I66hFBKDIlf4_86s9bvc8=/1200x628/smart/819%2F18721%2F18721753%2F36450284.jpg" alt="Aufgabe im Homeschooling" width="1500">
 <p class="font-weight-bold"> Die Aufgaben sind eine Sache für sich im Homeschooling. Eigentlich machen sie knapp 90% der Zeit des Homeschoolings aus und sind ziemlich ausschlaggebend wie gut man diese Zeit übersteht. Sollte man recht kreative Aufgaben bekommen
   wird man sich wahrscheinlich nicht langweilen und immer sich auf diese Aufgaben freuen. Bei mir ging das so weit, dass ich mir die für mich am unterhaltsamsten oder in anderen Worten ausgedrückt weniger Augenkrebs verursachenden Aufgaben
   bis zum Schluss aufschob um sie dann als perfekter Abschluss einer langen Woche genießen konnte. Das geht vom einfachen Anschauen von Dokumentationen, bei denen sich wenn man ehlich ist so oder so nichts merkt, bis hin zu einfachen Experimenten.
