--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
   </div>
 
   <!-- Left and right controls -->
-  <a class="carousel-control-prev" href="https://www.idowa.de/media.media.74ddded7-9e3f-4069-9dfa-af997abf1bac.original1024." data-slide="prev">
+  <a class="carousel-control-prev" href=#demo" data-slide="prev">
     <span class="carousel-control-prev-icon"></span>
   </a>
-  <a class="carousel-control-next" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTbriXESK5ElquRxKMfYNNAo4tC1DF2hzcCmA&usqp=CAU" data-slide="next">
+  <a class="carousel-control-next" href="#demo" data-slide="next">
     <span class="carousel-control-next-icon"></span>
   </a>
 
