--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </div>
 
   <!-- Left and right controls -->
-  <a class="carousel-control-prev" href=#demo" data-slide="prev">
+  <a class="carousel-control-prev" href="#demo" data-slide="prev">
     <span class="carousel-control-prev-icon"></span>
   </a>
   <a class="carousel-control-next" href="#demo" data-slide="next">
