--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
   </div>
 </nav>
 
-<div class="container" style="margin-top:30px>
-  
+<div class="container" style="margin-top:30px">
+  <div class="row">
     <div class="col-sm-4">
       <h2 class="font-weight-bold">Wichtiges</h2>
       <p class="font-weight-bold"> Das ist ein Projekt für Informatik und ist deshalb nur eine Übung </p>
@@ -202,7 +202,7 @@
       das Internet, zwar können es auch andere Sachen wie Sport sein, aber das Internet ist wohl das größte Beispiel. Personen sind gerne im Internet, weil es ihnen Spaß macht dort ihrer Lieblingsbeschäftigung nachzugehen. Sei das einfache Videos ansehen oder ein Spiel spielen. Die Möglichkeiten
       sind da endlos.</p> <p class="font-weight-bold"> Speziell durch das Homeschooling ist dieses Problem stärker geworden, denn die Versuchung in das Internet zu gehen und nicht die langweilige Aufgabe zu machen, ist schon groß. Es ist ja nur ein bis zwei Klicks. Viele Personen sagen sich dann, dass sie nur 5 Minuten das Video ansehen
       oder das Spiel spielen. Dabei bleibt es aber nicht gerade oft, sondern aus den 5 Minuten, wird schnell eine halbe Stunde. Dieses Problem ist für die jenigen kleiner, die dadurch Schuldgefühle bekommen. Ich zähle mich da dazu. Ich bekomme schon nach 2 Minuten Schuldgefühle und denke mir:"Ich könnte
-      jetzt eigentlich die Aufgabe fertigstellen." Das bringt mir zwar einige Kopfschmerzen, ist aber im Gesamtpacket besser als einfach eine halbe Stunde draus zu machen. Wie kann man jetzt dieses Problem umgehen? Nun es gibt einige Möglichkeiten. Eine wäre, dass immer jemand neben euch sitzt und euch 
+      jetzt eigentlich die Aufgabe fertigstellen." Das bringt mir zwar einige Kopfschmerzen, ist aber im Gesamtpacket besser als einfach eine halbe Stunde draus zu machen. Wie kann man jetzt dieses Problem umgehen? Nun es gibt einige Möglichkeiten. Eine wäre, dass immer jemand neben euch sitzt und euch
       sagt, dass ihr weiterarbeiten solltet. Dadurch ahmt man das schlechte Gewissen nach. Eine andere Möglichkeit wäre es, wenn man sich das Prokastrinieren aufschiebt. Das klingt jetzt etwas ironisch, funktioniert aber. Man sagt sich einfach selbst, dass man das Video sieht, wenn die Aufgabe erledigt
       ist, dadurch reizt man das Belohnungsverlangen und man will immer mehr von den verdienten Belohnungen. So ungefähr funktioniert das auch bei Glüchspiel. So wird das Aufschiebeproblem zum Aufgeschobenen.</p>
     </div>
