--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </div>
 
 
-<div class="jumbotron text-center" style="margin-bottom:0" id="marigin" >
+<div class="jumbotron text-center"  id="marigin" >
   <h1 class="font-weight-bold">Homeschooling</h1>
 </div>
 
