--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   </div>
 </nav>
 
-<div class="container" style="margin-top:30px">
+<div class="container" id="maggi">
   <div class="row">
     <div class="col-sm-4">
       <h2 class="font-weight-bold">Wichtiges</h2>
