--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <!-- The slideshow -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="https://www.idowa.de/media.media.74ddded7-9e3f-4069-9dfa-af997abf1bac.original1024.jpg" alt="Los Angeles"  width="1220" id="Los Angeles">
+      <img src="https://www.idowa.de/media.media.74ddded7-9e3f-4069-9dfa-af997abf1bac.original1024.jpg" alt="Los Angeles" width="1220" >
     </div>
     <div class="carousel-item">
       <img src="https://static.bnn.de/nachrichten/baden-wuerttemberg/AdobeStock_331435252.jpg-hlbsu2/alternates/LANDSCAPE_16x9_BASE/AdobeStock_331435252.jpg" alt="Chicago" width="1500">
@@ -46,7 +46,7 @@
 </div>
 
 
-<div class="jumbotron text-center"  id="marigin" >
+<div class="jumbotron text-center" style="margin-bottom:0" id="marigin" >
   <h1 class="font-weight-bold">Homeschooling</h1>
 </div>
 
@@ -71,7 +71,7 @@
   </div>
 </nav>
 
-<div class="container" id="maggi">
+<div class="container" style="margin-top:30px">
   <div class="row">
     <div class="col-sm-4">
       <h2 class="font-weight-bold">Wichtiges</h2>
@@ -217,3 +217,4 @@
 
 </body>
 </html>
+
