--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </div>
 
 
-<div class="jumbotron text-center" style="margin-bottom:0" id="marigin" >
+<div class="jumbotron text-center"  id="marigin" >
   <h1 class="font-weight-bold">Homeschooling</h1>
 </div>
 
@@ -71,7 +71,7 @@
   </div>
 </nav>
 
-<div class="container" style="margin-top:30px">
+<div class="container" >
   <div class="row">
     <div class="col-sm-4">
       <h2 class="font-weight-bold">Wichtiges</h2>
