--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-  <a class="navbar-brand">Gute Links</a>
+  <a class="navbar-brand">Verbindungen zu diesem Projekt</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -77,12 +77,11 @@
       <h2 class="font-weight-bold">Wichtiges</h2>
       <p class="font-weight-bold"> Das ist ein Projekt für Informatik und ist deshalb nur eine Übung </p>
 
-      <h3 class="font-weight-bold">Ein paar Links</h3>
+      <h3 class="font-weight-bold">Weitere Websites</h3>
 
       <ul class="nav nav-pills flex-column">
-        <li class="nav-item">
-          <a class="nav-link active" href="https://www.borg.at/">BORG</a>
-        </li>
+        
+    
         <li class="nav-item">
           <a class="nav-link" href="https://simon-36-e.github.io/themen.html">Anderer Block</a>
         </li>
