--- a/themen.html
+++ b/themen.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
+<html lang="de">
 <head>
-<title> Themen </title>
-<style> #Man { color: rgb(100, 100, 200);}
- body { background-color: rgb(300, 21, 22);}
- p { color: rgb(10, 200, 100)}
- </style>
+  <title>Bootstrap 4 Website Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://simon-36-e.github.io/style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+
 </head>
 <body>
 <h1 id="Man"> Thema: Aufregung wegen Corona</h1>
