--- a/themen.html
+++ b/themen.html
@@ -9,7 +9,43 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+  <a class="navbar-brand">Verbindungen zu diesem Projekt</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="collapsibleNavbar">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="https://www.borg.at">BORG Egg</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="https://www.borg.at/ausbildung/e-learning/">Moodle</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="https://github.com/">Github</a>
+      </li>
+    </ul>
+  </div>
+</nav>
 
+<div class="container" id="maggi">
+  <div class="row">
+    <div class="col-sm-4">
+      <h2 class="font-weight-bold">Wichtiges</h2>
+      <p class="font-weight-bold"> Das ist ein Projekt für Informatik und ist deshalb nur eine Übung </p>
+
+      <h3 class="font-weight-bold">Weitere Websites</h3>
+
+      <ul class="nav nav-pills flex-column">
+        
+    
+        <li class="nav-item">
+          <a class="nav-link" href="https://simon-36-e.github.io/themen.html">Anderer Block</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://simon-36-e.github.io/bilder.html">Bilder</a>
+        </li>
 
 </head>
 <body>
