--- a/themen.html
+++ b/themen.html
@@ -49,6 +49,9 @@
 
 </head>
 <body>
+  <hr class="d-sm-none">
+    </div>
+    <div class="col-sm-8">
 <h1 id="Man"> Thema: Aufregung wegen Corona</h1>
 <p1> Vielleich hat man es der ein oder andere schon mitbekommen, aber derzeit gibt es wieder Homeschooling. Warum gibt es das aber wieder? Ja, das ist eine sehr gute Frage und die Antwort darauf ist,
  dass es wieder irgendwelche Trottel nicht geschafft haben die Einschränkungen einzuhalten. Ich meine das kommt ja nicht von alleine, dass die Regierung sagt:" Ja, lass heute mal wieder die Grundrechte
@@ -59,4 +62,5 @@
  " Lass mal alle auf dem Stadtplatz treffen und saufen." Ich mein, ich wusste das ich ein bisschen dumm bin, wenn ich mal kurz jemandem was vorbei bringe oder so was, aber das ist doch einfach für
  das Virus eine Einladung zum alle anstecken. Ich wusste einfach nicht was ich damals sagen sollte, als ich das in den Nachrichten gesehen habe und da hab ich mich noch gewundert warum ich im Homeschooling
  bin. Man könnte ja meinen, dass der Mensch einen minimalen Sinn hat, das Dumme vom Intelligenten zu unterscheiden, aber da zweifle ich inzwischen auch dran auch an meinem eigenen. 
-</body>
+  </div>
+  </body>
