--- a/themen.html
+++ b/themen.html
@@ -41,7 +41,7 @@
         
     
         <li class="nav-item">
-          <a class="nav-link" href="https://simon-36-e.github.io/themen.html">Anderer Block</a>
+          <a class="nav-link" href="https://simon-36-e.github.io/index.html#Dritter">Projekt Homeschooling</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="https://simon-36-e.github.io/bilder.html">Bilder</a>
