--- a/themen.html
+++ b/themen.html
@@ -53,7 +53,7 @@
     </div>
     <div class="col-sm-8">
 <h1 id="Man"> Thema: Aufregung wegen Corona</h1>
-<p1> Vielleich hat man es der ein oder andere schon mitbekommen, aber derzeit gibt es wieder Homeschooling. Warum gibt es das aber wieder? Ja, das ist eine sehr gute Frage und die Antwort darauf ist,
+<p1> Vielleicht hat man es der ein oder andere schon mitbekommen, aber derzeit gibt es wieder Homeschooling. Warum gibt es das aber wieder? Ja, das ist eine sehr gute Frage und die Antwort darauf ist,
  dass es wieder irgendwelche Trottel nicht geschafft haben die Einschränkungen einzuhalten. Ich meine das kommt ja nicht von alleine, dass die Regierung sagt:" Ja, lass heute mal wieder die Grundrechte
  einschränken." Nein, das macht sie aus einem Grund. Dieser Grund ist, dass die Corona-Infektionen wieder steigen, weil die Leute sich denken:" Jetzt sieht es wieder so aus, als gägnen die Zahlen wieder 
  runter. Ich würd sagen lass mal alle zusammentrommeln und feiern." Vielleicht ist das jetzt etwas radikal formuliert, aber mir kommt es so vor. Ich sitzt hier und kann wieder in mein Homeschooling gehen,
@@ -62,5 +62,17 @@
  " Lass mal alle auf dem Stadtplatz treffen und saufen." Ich mein, ich wusste das ich ein bisschen dumm bin, wenn ich mal kurz jemandem was vorbei bringe oder so was, aber das ist doch einfach für
  das Virus eine Einladung zum alle anstecken. Ich wusste einfach nicht was ich damals sagen sollte, als ich das in den Nachrichten gesehen habe und da hab ich mich noch gewundert warum ich im Homeschooling
  bin. Man könnte ja meinen, dass der Mensch einen minimalen Sinn hat, das Dumme vom Intelligenten zu unterscheiden, aber da zweifle ich inzwischen auch dran auch an meinem eigenen. 
+  <br>
+  <h1 id="zweiter Man"> Thema: Masken </h1>
+    <p> Vielleicht will der ein oder andere jetzt, dass ich sage, wie schlimm Masken sind und wie furchtbar es ist eine zu tragen, aber um erhlich zu sein, ist es mir komplett egal ob ich eine Maske trage.
+      Ich verstehe auch das ganze Problem dahinter nicht. Ich meine, es ist zwar bestimmt nicht angenehm mit Lungenproblemen eine Maske zu tragen, aber die werden dann häufig eh davon freigestellt. Jedoch beschweren
+      sich häufig komplett gesunde Menschen darüber. Wahrscheinlich ist das so, weil die Maske sich unangenehm anfüllt, man nicht richtig atmen kann oder man sich eingeengt fühlt, aber was ist jetzt einem wohl lieber,
+      man steckt andere immerwieder an, weil man selbst Corona hat und es nicht merkt oder man fühlt sich eingeengt für ungefähr 20 Minuten Busfahrt oder den Unterricht. Man sollte mal erkennen, dass man damit hauptsächlich
+      andere Menschen schützt und wenn man merkt, dass jemand in deiner Umgebung gerade an Corona gestorben ist, weil du keine Maske aufhattest, ist das schon ein anderes Gefühl. Vorallem sind häufig die, die sich 
+      beschweren die, die meist am wenigsten davon betroffen sind. Damit meine ich Menschen, die nur eine Maske für den Bus brauchen, weil sie bei der Arbeit komplett allein sind und niemanden anstecken können. Die Personen, die
+      es am schlimmsten in diese Sache erwischt hat, sind die Schüler und hört man von denen irgendwas. Ich zumindest nicht. Die sitzen bis zu 8 Stunden einfach da mit Maske und die nehem das einfach hin. Ohne 
+      auch nur ein Wort darüber zu schimpfen und ich weiß das, denn ich bin selbst Schüler. Außerdem finde ich zumindest, dass diese Maskenproblematik durch die FFP2-Masken viel besser geworden ist. Die fühlen sich
+      sehr viel besser an und man hat nicht das Gefühl, als würde man erstickt werden. Also sollten die jenigen, die sich am meisten über die Masken aufregen, mal Gedanken machen, ob dieser Protest überhaupt so 
+      gerechtfertigt ist. Ich sage nicht, dass nur die jenigen jammern dürfen, denen es am schlechtesten geht, aber wenn sogar die nichts sagen, sollte man sich das vorher erst nochmal überlegen. </p>
   </div>
   </body>
