--- a/themen.html
+++ b/themen.html
@@ -53,7 +53,7 @@
     </div>
     <div class="col-sm-8">
 <h1 id="Man"> Thema: Aufregung wegen Corona</h1>
-      <img src="https://www.festo.com/group/de/repo/assets/319718852-corona-1532x900-adobestock.jpg">
+      <img src="https://www.festo.com/group/de/repo/assets/319718852-corona-1532x900-adobestock.jpg" class="img-fluid" alt="Sache">
 <p1> Vielleicht hat man es der ein oder andere schon mitbekommen, aber derzeit gibt es wieder Homeschooling. Warum gibt es das aber wieder? Ja, das ist eine sehr gute Frage und die Antwort darauf ist,
  dass es wieder irgendwelche Trottel nicht geschafft haben die Einschränkungen einzuhalten. Ich meine das kommt ja nicht von alleine, dass die Regierung sagt:" Ja, lass heute mal wieder die Grundrechte
  einschränken." Nein, das macht sie aus einem Grund. Dieser Grund ist, dass die Corona-Infektionen wieder steigen, weil die Leute sich denken:" Jetzt sieht es wieder so aus, als gägnen die Zahlen wieder 
