--- a/themen.html
+++ b/themen.html
@@ -46,6 +46,14 @@
         <li class="nav-item">
           <a class="nav-link" href="https://simon-36-e.github.io/bilder.html">Bilder</a>
         </li>
+         <h3 class="font-weight-bold">Kapitel</h3>
+      <ul>
+          <li class="nav-item">
+            <a class="nav-link" href="#Man"> Corona Aufregung</a>
+          </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#zweiter Man"> Masken</a>
+            </li>
 
 </head>
 <body>
