--- a/themen.html
+++ b/themen.html
@@ -73,7 +73,7 @@
  bin. Man könnte ja meinen, dass der Mensch einen minimalen Sinn hat, das Dumme vom Intelligenten zu unterscheiden, aber da zweifle ich inzwischen auch dran auch an meinem eigenen. 
   <br>
   <h1 id="zweiter Man"> Thema: Masken </h1>
-  <img src="https://www.solinger-tageblatt.de/bilder/2020/08/13/13859085/1169342099-8ebea5d3-5c49-497c-967f-dbaafdb46d4d-2uQIjHSgauac.jpg" class="img-fluid" alt="Masken">
+  <img src="https://www.solinger-tageblatt.de/bilder/2020/08/13/13859085/1169342099-8ebea5d3-5c49-497c-967f-dbaafdb46d4d-2uQIjHSgauac.jpg" class="img-fluid" width="1200" alt="Masken">
     <p> Vielleicht will der ein oder andere jetzt, dass ich sage, wie schlimm Masken sind und wie furchtbar es ist eine zu tragen, aber um erhlich zu sein, ist es mir komplett egal ob ich eine Maske trage.
       Ich verstehe auch das ganze Problem dahinter nicht. Ich meine, es ist zwar bestimmt nicht angenehm mit Lungenproblemen eine Maske zu tragen, aber die werden dann häufig eh davon freigestellt. Jedoch beschweren
       sich häufig komplett gesunde Menschen darüber. Wahrscheinlich ist das so, weil die Maske sich unangenehm anfüllt, man nicht richtig atmen kann oder man sich eingeengt fühlt, aber was ist jetzt einem wohl lieber,
