--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 
 <div class="jumbotron text-center"  id="marigin" >
-  <h1 class="font-weight-bold">Homeschooling</h1>
+  <h1 class="font-weight-bold" id="Head">Homeschooling</h1>
 </div>
 
 
