--- a/index.html
+++ b/index.html
@@ -209,7 +209,10 @@
 </div>
 
 <div class="jumbotron text-center" style="margin-bottom:0">
-  <p>Dies ist nur ein Projekt in Informatik und niemand sollte sich davon provoziert oder beleidigt fühlen. Ich habe einfach geschrieben, was mir eingefallen ist und ist deshalb sehr spontan</p>
+  <p> Vorname: Simon            
+    Nachname: Eberle
+    E-Mail: simon.eberle@borg.at
+    Dies ist nur ein Projekt in Informatik und niemand sollte sich davon provoziert oder beleidigt fühlen. Ich habe einfach geschrieben, was mir eingefallen ist und ist deshalb sehr spontan</p>
 </div>
 
 
