--- a/index.html
+++ b/index.html
@@ -209,10 +209,10 @@
 </div>
 
 <div class="jumbotron text-center" style="margin-bottom:0">
-  <p> Vorname: Simon            
-    Nachname: Eberle
-    E-Mail: simon.eberle@borg.at
-    Dies ist nur ein Projekt in Informatik und niemand sollte sich davon provoziert oder beleidigt fühlen. Ich habe einfach geschrieben, was mir eingefallen ist und ist deshalb sehr spontan</p>
+  <p> Vorname: Simon  </p>          
+  <p>Nachname: Eberle</p>
+  <p>E-Mail: simon.eberle@borg.at </p>
+    <p>Dies ist nur ein Projekt in Informatik und niemand sollte sich davon provoziert oder beleidigt fühlen. Ich habe einfach geschrieben, was mir eingefallen ist und ist deshalb sehr spontan</p>
 </div>
 
 
